package org.totalgrid.reef.proto.Communications;

option java_package = "org.totalgrid.reef.proto";
option java_outer_classname = "Communications";

message EndpointState {

    enum State {
        COMMS_UP = 1;
        COMMS_DOWN = 2;
        UNKNOWN = 3;
        ERROR = 4;
    }

	required State state = 1;
}


message ChannelState {

    enum State {
        CLOSING = 1;
        OPENING = 2;
        OPEN = 3;
        ERROR = 4;
        UNKNOWN = 5;
    }

    required State state = 1;

}
